<resources>
    <!-- String related to public -->
    <string name="app_name">百阅</string>
    <string name="app_update">应用更新</string>
    <string name="app_website">http://www.safehy.com</string>
    <string name="data_no_more">数据见底了,没有更多啦!</string>
    <string name="data_null">暂无数据</string>
    <string name="data_error">数据错误</string>
    <string name="data_success">加载成功</string>
    <string name="action_to_top">返回顶部</string>
    <string name="action_ok">确定</string>
    <string name="action_cancle">取消</string>

    <string name="test">测试</string>

    <!-- String related to nav -->
    <string name="nav_app">关于应用</string>
    <string name="nav_about">关于我们</string>
    <string name="nav_safe">安全中心</string>
    <string name="nav_help">帮助答疑</string>
    <string name="nav_exit">退出应用</string>

    <!-- Strings related to main -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fragment_app">App</string>
    <string name="fragment_and">Android</string>
    <string name="fragment_ios">IOS</string>
    <string name="fragment_front">前端</string>
    <string name="fragment_expand">学习拓展</string>
    <string name="fragment_recommend">推荐资源</string>
    <string name="fragment_rest">休息视频</string>
    <string name="fragment_boon">写真欣赏</string>
    <string name="fragment_bucket">综合</string>
    <string name="fragment_template">模板</string>
    <string name="action_scan">扫描</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">保存</string>

    <!-- Strings related to web -->
    <string name="title_activity_web">详细信息</string>
    <string name="toast_copy_done">复制成功</string>
    <string name="toast_open_fail">打开链接失败</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">从浏览器打开链接</string>

    <!-- Strings related to image -->
    <string name="title_activity_img">图片详情</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">用户登录</string>
    <string name="login_hint_uname">用户名</string>
    <string name="login_hint_pwd">密码</string>
    <string name="action_sign_in">登录 OR 注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="login_register">注册</string>
    <string name="login_forgot">忘记密码？</string>
    <string name="login_loading">正在登录</string>
    <string name="error_invalid_email">Email无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">输入项不能为空</string>
    <string name="permission_rationale">"联系方式需要邮箱完成确认."</string>

    <!-- Strings related to about -->
    <string name="title_activity_about">关于应用</string>
    <string name="about_thanks">致谢:代码家/Gank开发者们</string>
    <string name="about_open_source">com.android.support:appcompat-v7:24.+\n
        com.android.support:design:24.+\n
        com.github.jay-y:yapp:2.0.6\n
        com.android.support:cardview-v7:24.+\n
        com.github.jay-y:permission:1.0.0\n
        com.github.jay-y:share:1.0.3\n
        io.reactivex:rxandroid:1.+\n
        com.squareup.okhttp3:okhttp:3.+\n
        com.squareup.retrofit2:retrofit:2.+\n
        com.squareup.retrofit2:converter-gson:2.+\n
        com.squareup.retrofit2:adapter-rxjava:2.+\n
        com.squareup.picasso:picasso:2.5.2\n
        com.github.afollestad.material-dialogs:core:0.8.5.3@aar\n
        com.linroid.filtermenu:library:0.2.+@aar\n
        com.github.chrisbanes.photoview:library:1.2.2\n
        com.mikepenz:iconics-core:2.5.5@aar\n
        com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar\n
        com.mikepenz:fontawesome-typeface:4.5.0.1@aar
    </string>
</resources>
